{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 445,
  "lineage": "69a9f67f-65d6-75f2-d052-ddc4b43c3ae6",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0e317e5f5ccee3cb4",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0e317e5f5ccee3cb4",
            "name": "alb_sg",
            "tags": {
              "Envrionment": "ops",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0760c610636e0b12f",
            "description": "bastion",
            "filter": null,
            "id": "sg-0760c610636e0b12f",
            "name": "terraform-20230709071344103800000001",
            "tags": {
              "Envrionment": "ops",
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "con_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-03366ca2b48574c6f",
            "description": "con_linux",
            "filter": null,
            "id": "sg-03366ca2b48574c6f",
            "name": "terraform-20230709071842576000000001",
            "tags": {
              "Envrionment": "ops",
              "Name": "con_linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-00a12360fb9f73c98",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-00a12360fb9f73c98",
            "name": "rds_sg",
            "tags": {
              "Envrionment": "ops",
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "svr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-085cdfbaa1b5582e9",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-085cdfbaa1b5582e9",
            "name": "main_web_server_sg",
            "tags": {
              "Envrionment": "ops",
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "window",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0d4729a6133e550ba",
            "description": "window",
            "filter": null,
            "id": "sg-0d4729a6133e550ba",
            "name": "terraform-20230709071842576100000002",
            "tags": {
              "Envrionment": "ops",
              "Name": "window"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-06bded5f3b5fbaae5",
            "cidr_block": "192.168.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e5f9e633fc161c25",
                "cidr_block": "192.168.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bded5f3b5fbaae5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00619c630e1444859",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "ops",
              "Name": "ops_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0459c1b4456365cdb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0459c1b4456365cdb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e317e5f5ccee3cb4",
            "security_group_rule_id": "sgr-0459c1b4456365cdb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0867ae766afe33916",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0867ae766afe33916",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0760c610636e0b12f",
            "security_group_rule_id": "sgr-0867ae766afe33916",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-01f25f3b5c72ea7d9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01f25f3b5c72ea7d9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00a12360fb9f73c98",
            "security_group_rule_id": "sgr-01f25f3b5c72ea7d9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "svr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0e398420a6c3c2c4b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e398420a6c3c2c4b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-085cdfbaa1b5582e9",
            "security_group_rule_id": "sgr-0e398420a6c3c2c4b",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "window_console",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-06eb7cab6fd756330",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-06eb7cab6fd756330",
            "ip_protocol": "-1",
            "prefix_list_id": "pl-0a555cfc25c6edcca",
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d4729a6133e550ba",
            "security_group_rule_id": "sgr-06eb7cab6fd756330",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_managed_prefix_list.console",
            "data.aws_security_group.window"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "windows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0509d13690136edfe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0509d13690136edfe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d4729a6133e550ba",
            "security_group_rule_id": "sgr-0509d13690136edfe",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.window"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-05b3bd35b7d597feb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05b3bd35b7d597feb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e317e5f5ccee3cb4",
            "security_group_rule_id": "sgr-05b3bd35b7d597feb",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-02837e9efb8d5be86",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3389,
            "id": "sgr-02837e9efb8d5be86",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0760c610636e0b12f",
            "security_group_rule_id": "sgr-02837e9efb8d5be86",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-04351894f0a58f4c7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04351894f0a58f4c7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0760c610636e0b12f",
            "security_group_rule_id": "sgr-04351894f0a58f4c7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-013576647771b1c2f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-013576647771b1c2f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-03366ca2b48574c6f",
            "security_group_id": "sg-00a12360fb9f73c98",
            "security_group_rule_id": "sgr-013576647771b1c2f",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.con_linux",
            "data.aws_security_group.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "svr_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-03bfa60adb5713f41",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-03bfa60adb5713f41",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-085cdfbaa1b5582e9",
            "security_group_id": "sg-00a12360fb9f73c98",
            "security_group_rule_id": "sgr-03bfa60adb5713f41",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.db",
            "data.aws_security_group.svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "svr_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-01e43e4063a11b6e9",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-01e43e4063a11b6e9",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e317e5f5ccee3cb4",
            "security_group_id": "sg-085cdfbaa1b5582e9",
            "security_group_rule_id": "sgr-01e43e4063a11b6e9",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.alb",
            "data.aws_security_group.svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0360a323d2341143f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0360a323d2341143f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0760c610636e0b12f",
            "security_group_id": "sg-085cdfbaa1b5582e9",
            "security_group_rule_id": "sgr-0360a323d2341143f",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.bastion",
            "data.aws_security_group.svr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "window",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0f37e699efb86dcf3",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3389,
            "id": "sgr-0f37e699efb86dcf3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0760c610636e0b12f",
            "security_group_id": "sg-0d4729a6133e550ba",
            "security_group_rule_id": "sgr-0f37e699efb86dcf3",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.bastion",
            "data.aws_security_group.window"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "window2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group-rule/sgr-0959a20080826f736",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3389,
            "id": "sgr-0959a20080826f736",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0760c610636e0b12f",
            "security_group_id": "sg-03366ca2b48574c6f",
            "security_group_rule_id": "sgr-0959a20080826f736",
            "tags": null,
            "tags_all": {},
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.bastion",
            "data.aws_security_group.con_linux"
          ]
        }
      ]
    }
  ]
}